添加启动错误方法